--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,14 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "autoprefixer": "^10.2.5",
     "next": "10.2.0",
+    "normalize.css": "^8.0.1",
+    "postcss": "^8.2.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "swr": "^0.5.6"
+    "swr": "^0.5.6",
+    "tailwindcss": "^2.1.2"
   },
   "devDependencies": {
     "@types/node": "^15.0.2",
