--- a/manifests/install.yaml
+++ b/manifests/install.yaml
@@ -7,6 +7,23 @@ metadata:
   namespace: kube-portal
 ---
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  labels:
+    app: kube-portal
+  name: kube-portal
+rules:
+- apiGroups:
+  - networking.k8s.io
+  - extensions
+  resources:
+  - ingresses
+  verbs:
+  - get
+  - list
+  - watch
+---
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
