--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,13 @@ updates:
   directory: "/"
   schedule:
     interval: daily
+  labels:
+    - "dependencies"
+    - "automerge"
 - package-ecosystem: 'npm'
   directory: '/client'
   schedule:
     interval: 'daily'
+  labels:
+    - "dependencies"
+    - "automerge"
