--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,12 +7,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
       - name: Setup Go
         uses: actions/setup-go@v1
         with:
-          go-version: 1.17
+          go-version: "1.17"
       - name: Go Test
         run: go test -coverprofile=coverage.txt -covermode=atomic ./...
 
