--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,11 +6,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
       - name: Setup Go
-        uses: actions/setup-go@v1
+        uses: actions/setup-go@v4
         with:
-          go-version: "1.17"
+          go-version-file: go.mod
+          cache-dependency-path: go.sum
       - name: Go Test
         run: go test -coverprofile=coverage.txt -covermode=atomic ./...
 
