--- a/client/package.json
+++ b/client/package.json
@@ -8,27 +8,6 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
-    "@types/react": "^17.0.43",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.0.0",
-    "@mui/material": "^5.0.0",
-    "autoprefixer": "^10.4.4",
-    "axios": "^0.26.1",
-    "next": "12.1.4",
-    "nookies": "^2.5.2",
-    "normalize.css": "^8.0.1",
-    "postcss": "^8.4.12",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "tailwindcss": "^3.0.23"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.23",
-    "@types/react": "^17.0.43",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.0.4",
-    "typescript": "^4.6.3"
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
