--- a/manifests/crd/kustomization.yaml
+++ b/manifests/crd/kustomization.yaml
@@ -2,7 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- ../base
-- ../role
-- ../crd
-- ./clusterrolebinding.yaml
+  - ./kubeportal.kanatakita.com_externallinks.yaml
