--- a/.github/workflows/push-tag-when-pr-was-merged.yml
+++ b/.github/workflows/push-tag-when-pr-was-merged.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           git config user.email "action@users.noreply.github.com"
           git config user.name "GitHub Action"
-          git switch master
+          git switch -c test
           : # update manifest's tag
           cd manifests/base/
           kustomize edit set image kanatakita/kube-portal:${{ steps.bump-semver.outputs.new_version }}
