--- a/.github/workflows/push-tag-when-pr-was-merged.yml
+++ b/.github/workflows/push-tag-when-pr-was-merged.yml
@@ -35,7 +35,6 @@ jobs:
         run: |
           git config user.email "action@users.noreply.github.com"
           git config user.name "GitHub Action"
-          git switch master
           : # update manifest's tag
           cd manifests/base/
           kustomize edit set image kanatakita/kube-portal:${{ steps.bump-semver.outputs.new_version }}
@@ -46,6 +45,6 @@ jobs:
           git commit -m "update manifests"
           git tag ${{ steps.bump-semver.outputs.new_version }}
           : # revert the commit & push to origin
-          git revert HEAD --no-edit
+          : git revert HEAD --no-edit
           git push origin HEAD
           git push origin ${{ steps.bump-semver.outputs.new_version }}
