--- a/.github/workflows/push-tag-when-pr-was-merged.yml
+++ b/.github/workflows/push-tag-when-pr-was-merged.yml
@@ -33,9 +33,6 @@ jobs:
       - id: push-tag
         if: ${{ steps.release-label.outputs.level != null }}
         run: |
-          git config --global user.email "action@users.noreply.github.com"
-          git config --global user.name "GitHub Action"
-          git switch master
           : # update manifest's tag
           cd manifests/base/
           kustomize edit set image kanatakita/kube-portal:${{ steps.bump-semver.outputs.new_version }}
@@ -43,9 +40,11 @@ jobs:
           kustomize build ./install/ > ./install.yaml
           : # commit the above & grant a tag for new_version
           git add .
+          git config --global user.email "action@users.noreply.github.com"
+          git config --global user.name "GitHub Action"
           git commit -m "update manifests"
-          git tag ${{ steps.bump-semver.outputs.new_version }}
+          : git tag ${{ steps.bump-semver.outputs.new_version }}
           : : # revert the commit & push to origin
           : git revert HEAD --no-edit
-          : git push origin master
+          : git push origin HEAD
           : git push origin ${{ steps.bump-semver.outputs.new_version }}
