--- a/.github/workflows/push-tag-when-pr-was-merged.yml
+++ b/.github/workflows/push-tag-when-pr-was-merged.yml
@@ -17,7 +17,6 @@ jobs:
         with:
           # to trigger release.yml Action
           token: ${{ secrets.TOKEN }}
-      - uses: imranismail/setup-kustomize@v2
 
       - uses: actions-ecosystem/action-get-latest-tag@v1
         id: get-latest-tag
@@ -30,10 +29,10 @@ jobs:
           current_version: ${{ steps.get-latest-tag.outputs.tag }}
           level: ${{ steps.release-label.outputs.level }}
 
+      - uses: imranismail/setup-kustomize@v2
       - id: push-tag
         if: ${{ steps.release-label.outputs.level != null }}
         run: |
-          chmod -R u+rwX,go+rX,go-w .git
           : # update manifest's tag
           cd manifests/base/
           kustomize edit set image kanatakita/kube-portal:${{ steps.bump-semver.outputs.new_version }}
@@ -41,8 +40,8 @@ jobs:
           kustomize build ./install/ > ./install.yaml
           : # commit the above & grant a tag for new_version
           git add .
-          git config --global user.email "action@users.noreply.github.com"
-          git config --global user.name "GitHub Action"
+          git config user.email "action@users.noreply.github.com"
+          git config user.name "GitHub Action"
           git commit -m "update manifests"
           : git tag ${{ steps.bump-semver.outputs.new_version }}
           : : # revert the commit & push to origin
