--- a/development/air.toml
+++ b/development/air.toml
@@ -7,7 +7,7 @@ tmp_dir = "tmp"
 
 [build]
 # Just plain old shell command. You could use `make` as well.
-cmd = "go build -o app main.go"
+cmd = "go build -o ./app main.go"
 # Binary file yields from `cmd`.
 bin = "app"
 # Watch these filename extensions.
