--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/react": "^19.0.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^7.0.0",
     "@mui/material": "^7.0.0",
+    "@tailwindcss/postcss": "^4.1.7",
+    "@types/react": "^19.0.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.0.0",
     "next": "^15.0.0",
@@ -27,11 +28,12 @@
   "devDependencies": {
     "@types/node": "^22.0.0",
     "@types/react": "^19.0.0",
+    "cssnano": "^6.0.1",
     "eslint": "^9.0.0",
     "eslint-config-next": "^15.0.0",
     "typescript": "^5.0.0"
   },
   "resolutions": {
-     "@types/react": "19.0.0"
+    "@types/react": "19.0.0"
   }
 }
