--- a/.github/workflows/build-branch.yml
+++ b/.github/workflows/build-branch.yml
@@ -13,19 +13,11 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: kanatakita/kube-portal
-          tags: |
-            type=sha,prefix=,format=long
+          images: ghcr.io/${{ github.repository }}
 
       - name: Build
         uses: docker/build-push-action@v6
@@ -36,7 +28,7 @@ jobs:
           build-args: |
             APP_VERSION=no_version
             APP_COMMIT=${{ github.sha }}
-          push: true
+          push: false
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
