--- a/.github/workflows/build-tag.yml
+++ b/.github/workflows/build-tag.yml
@@ -19,14 +19,15 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: kanatakita/kube-portal
+          images: ghcr.io/${{ github.repository }}
           tags: |
             type=semver,pattern={{raw}}
 
