--- a/.github/workflows/push-tag-when-pr-was-merged.yml
+++ b/.github/workflows/push-tag-when-pr-was-merged.yml
@@ -38,7 +38,7 @@ jobs:
           git config user.name "GitHub Action"
           : ## update manifest's tag
           cd manifests/base/
-          kustomize edit set image kanatakita/kube-portal:${{ steps.bump-semver.outputs.new_version }}
+          kustomize edit set image ghcr.io/shotakitazawa/kube-portal:${{ steps.bump-semver.outputs.new_version }}
           cd ..
           kustomize build ./install/ > ./install.yaml
           : ## commit the above & grant a tag for new_version
