--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,11 @@
     "@types/react": "^19.0.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.0.0",
-    "next": "^16.0.0",
+    "next": "^16.0.7",
     "nookies": "^2.5.2",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.31",
-    "react": "^19.0.0",
+    "react": "19.1.1",
     "react-dom": "^19.0.0",
     "tailwindcss": "^3.0.23"
   },
