--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,26 +13,25 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^7.0.0",
     "@mui/material": "^7.0.0",
-    "@types/react": "^19.0.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.0.0",
     "next": "^16.0.7",
     "nookies": "^2.5.2",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.31",
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
+    "react": "19.1.3",
+    "react-dom": "19.1.3",
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
     "@types/node": "^24.0.0",
-    "@types/react": "^19.0.0",
+    "@types/react": "19.1.3",
     "cssnano": "^7.0.0",
     "eslint": "^9.0.0",
     "eslint-config-next": "^16.0.0",
     "typescript": "^5.0.0"
   },
   "resolutions": {
-    "@types/react": "19.1.8"
+    "@types/react": "19.1.3"
   }
 }
